Fix test after parsing algorithm modification