@@ -1,6 +1,7 @@
 package com.en.abbrevio.service.parser;
 
 import com.en.abbrevio.exception.ParsingException;
+import com.en.abbrevio.model.ReactionStep;
 import com.en.abbrevio.service.parser.impl.MoleculeAbbreviationHandler;
 import com.en.abbrevio.service.parser.impl.XMLParserService;
 import lombok.SneakyThrows;
@@ -22,6 +23,7 @@ import javax.xml.parsers.SAXParser;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.StringReader;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -39,8 +41,25 @@ public class XMLParserServiceTest {
     void testXmlParserService() {
         String content = FileCopyUtils.copyToString(new InputStreamReader
                 (new ClassPathResource("request_body_example.xml").getInputStream()));
-        List<String> expectedList = Arrays.asList("DIPEA");
-        List<String> parseResult = parserService.parse(content);
+        List<ReactionStep<String>> parseResult = parserService.parse(content);
+
+        ReactionStep<String> firstStep = new ReactionStep<>();
+        List<String> firstStepReactants = List.of("TRT");
+        List<String> firstStepReagents = List.of("DIPEA", "AA");
+        List<String> firstStepProducts = List.of("FRG", "FGR");
+        firstStep.getReactants().addAll(firstStepReactants);
+        firstStep.getReagents().addAll(firstStepReagents);
+        firstStep.getProducts().addAll(firstStepProducts);
+
+        ReactionStep<String> secondStep = new ReactionStep<>();
+        List<String> secondStepReactants = List.of("FRG", "FGR");
+        List<String> secondStepReagents = List.of("AA");
+        secondStep.getReactants().addAll(secondStepReactants);
+        secondStep.getReagents().addAll(secondStepReagents);
+
+        List<ReactionStep<String>> expectedList = new ArrayList<>();
+        expectedList.add(firstStep);
+        expectedList.add(secondStep);
 
         Assertions.assertIterableEquals(expectedList, parseResult);
     }
